@@ -6,6 +6,7 @@ export(CytoscapeWindow)
 export(RemoveFromGroup)
 export(addCyEdges)
 export(addCyNodes)
+export(applyFilter)
 export(bundleEdges)
 export(clearEdgePropertyBypass)
 export(clearNetworkCenterBypass)
@@ -30,6 +31,8 @@ export(commandsPOST)
 export(commandsRun)
 export(copyCytoscapeNetwork)
 export(copyVisualStyle)
+export(createColumnFilter)
+export(createDegreeFilter)
 export(createGraphFromNetwork)
 export(createGroup)
 export(createIgraphFromNetwork)
@@ -79,6 +82,7 @@ export(dockPanel)
 export(enableApp)
 export(existing.CytoscapeWindow)
 export(expandGroup)
+export(exportFilters)
 export(exportImage)
 export(exportNetwork)
 export(exportNetworkToNDEx)
@@ -167,6 +171,7 @@ export(hideNodes)
 export(hidePanel)
 export(hideSelectedEdges)
 export(hideSelectedNodes)
+export(importFilters)
 export(importNetworkFromFile)
 export(importNetworkFromNDEx)
 export(importVisualStyles)
