@@ -1,0 +1,27 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/Filters.R
+\name{exportFilters}
+\alias{exportFilters}
+\title{Export Filters}
+\usage{
+exportFilters(filename = "filters.json", base.url = .defaultBaseUrl)
+}
+\arguments{
+\item{filename}{(char) Path and name of the filters file to save. Default is 
+"filters.json"}
+
+\item{base.url}{(optional) Ignore unless you need to specify a custom domain,
+port or version to connect to the CyREST API. Default is http://localhost:1234
+and the latest version of the CyREST API supported by this version of RCy3.}
+}
+\value{
+Path to saved file
+}
+\description{
+Saves filters to file in JSON format.
+}
+\examples{
+\donttest{
+exportFilters()
+}
+}
